# StephenPrataSolutions

./: CMakeLists.txt  CPP-Learning.sln  README.md  main.cpp
CPP-Learning/: CPP-Learning.vcxproj  CPP-Learning.vcxproj.DotSettings  CPP-Learning.vcxproj.filters  Main.cpp
CPP-Learning/Chapters/10th/: TenthChapter.cpp  TenthChapter.h
CPP-Learning/Chapters/10th/1st/: BackAccount.cpp
CPP-Learning/Chapters/10th/2nd/: Person.cpp
CPP-Learning/Chapters/10th/4th/: SalesClass.cpp  SalesClass.h
CPP-Learning/Chapters/10th/6th/: Move.h
CPP-Learning/Chapters/10th/7th/: Plorg.cpp  Plorg.h
CPP-Learning/Chapters/11th/: EleventhChapter.cpp  EleventhChapter.h
CPP-Learning/Chapters/11th/1st/: Vector.h  output.txt
CPP-Learning/Chapters/11th/2nd/: VectorRect.cpp  VectorRect.h
CPP-Learning/Chapters/11th/4th/: Time.cpp  Time.h
CPP-Learning/Chapters/11th/5th/: Mass1.h
CPP-Learning/Chapters/11th/6th/: Mass2.h
CPP-Learning/Chapters/12th/: TwelfthChapter.h
CPP-Learning/Chapters/12th/1st/: Cow.h
CPP-Learning/Chapters/12th/2nd/: String.cpp  String.h
CPP-Learning/Chapters/3rd/: ThirdChapter.cpp
CPP-Learning/Chapters/5th/: FifthChapter.cpp  FifthChapter.h
CPP-Learning/Chapters/6th/: SixthChapter.cpp  SixthChapter.h
CPP-Learning/Chapters/7th/: SeventhChapter.cpp  SeventhChapter.h
CPP-Learning/Chapters/8th/: EighthChapter.cpp  EighthChapter.h
CPP-Learning/Chapters/9th/: NinthChapter.cpp  NinthChapter.h
CPP-Learning/Chapters/9th/1st/: Golf.cpp  Golf.h
CPP-Learning/Chapters/9th/4th/: Sales.cpp  Sales.h
CPP-Learning/Chapters/Fifth/: FifthChapter.h
CPP-Learning/Chapters/Fourth/: FourthChapter.cpp  FourthChapter.h
CPP-Learning/Chapters/Second/: SecondChapter.cpp  SecondChapter.h
CPP-Learning/Chapters/Third/: ThirdChapter.cpp  ThirdChapter.h
CPP-Learning/x64/Debug/: CPP-Learning.exe.recipe  CPP-Learning.ilk  vc143.idb
CPP-Learning/x64/Debug/CPP-Learning.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPP-Learning.lastbuildstate  Cl.items.tlog  link.command.1.tlog  (+2 more)
source/: Declarations.h  main.cpp
source/10thChapter/: 1stTask.cpp  2ndTask.cpp  5thTask.cpp  8thTask.cpp  Declarations.h
source/10thChapter/1stTaskFiles/: BackAccount.cpp  BankAccount.h
source/10thChapter/2ndTaskFiles/: Person.cpp  Person.h
source/10thChapter/3rdTaskFiles/: GolfClass.h
source/10thChapter/4thTaskFiles/: SalesClass.cpp  SalesClass.h
source/10thChapter/5thTaskFiles/: Stack.h
source/10thChapter/6thTaskFiles/: Move.h
source/10thChapter/7thTaskFiles/: Plorg.h
source/10thChapter/8thTaskFiles/: List.cpp  List.h
source/11thChapter/: 1stTask.cpp  2ndTask.cpp  5thTask.cpp  Declarations.h
source/11thChapter/1stTaskFiles/: Vector.h
source/11thChapter/2ndTaskFiles/: VectorRect.h
source/11thChapter/4thTaskFiles/: Time.h
source/11thChapter/5thTaskFiles/: Mass1.h
source/11thChapter/6thTaskFiles/: Mass2.cpp  Mass2.h
source/11thChapter/7thTaskFiles/: Complex.h
source/12thChapter/: 1stTask.cpp  2ndTask.cpp  3rdTask.cpp  4thTask.cpp  Declarations.h
source/12thChapter/1stTaskFiles/: Cow.h
source/12thChapter/2ndTaskFiles/: String.cpp  String.h
source/12thChapter/3rdTaskFiles/: Stock.cpp  Stock.h
source/12thChapter/4thTaskFiles/: Stack.cpp  Stack.h
source/2ndChapter/: 1stTask.cpp  2ndTask.cpp  3rdTask.cpp  4thTask.cpp  6thTask.cpp  7thTask.cpp  Declarations.h
source/3rdChapter/: 4thTask.cpp  6thTask.cpp  7thTask.cpp  Declarations.h
source/4thChapter/: 2ndTask.cpp  4thTask.cpp  6thTask.cpp  9thTask.cpp  Declarations.h
source/5thChapter/: 10thTask.cpp  2ndTask.cpp  9thTask.cpp  Declarations.h
source/6thChapter/: 2ndTask.cpp  4thTask.cpp  6thTask.cpp  7thTask.cpp  Declarations.h
source/7thChapter/: 10thTask.cpp  2ndTask.cpp  5thTask.cpp  7thTask.cpp  8thTask.cpp  9thTask.cpp  Declarations.h
source/8thChapter/: 2ndTask.cpp  3rdTask.cpp  6thTask.cpp  7thTask.cpp  Declarations.h
source/9thChapter/: 2ndTask.cpp  4thTask.cpp  Declarations.h
source/9thChapter/1stTaskFiles/: Golf.h
source/9thChapter/4thTaskFiles/: Sales.cpp  Sales.h
source/CodeWars/: Declarations.h
source/CodeWars/2ndKyu/: Declarations.h  PointerMonster.cpp
source/CodeWars/4thKyu/: Declarations.h  HammingNumbers.cpp  MysteryFunction.cpp  SumByFactors.cpp
source/CodeWars/5thKyu/: Brainfuck.cpp  Declarations.h
source/CodeWars/6thKyu/: Declarations.h  MobiusFunction.cpp
source/LeetCode/: Declarations.h
source/LeetCode/Easy/: Declarations.h  LongestCommonPrefix.cpp  PalindromeNumber.cpp  PlusOne.cpp
source/LeetCode/Normal/: AddTwoNumbers.cpp  Declarations.h
source/StevenPrata/: Declarations.h
source/StevenPrata/10th/: TenthChapter.h
source/StevenPrata/10thChapter/: 3rdTask.cpp  4thTask.cpp  5thTask.cpp  6thTask.cpp  7thTask.cpp
source/StevenPrata/11th/: EleventhChapter.h
source/StevenPrata/11thChapter/: 3rdTask.cpp  4thTask.cpp  6thTask.cpp  7thTask.cpp  Declarations.h
source/StevenPrata/12th/: TwelfthChapter.cpp
source/StevenPrata/12thChapter/: Declarations.h
source/StevenPrata/2ndChapter/: 5thTask.cpp  Declarations.h
source/StevenPrata/3rd/: ThirdChapter.cpp  ThirdChapter.h
source/StevenPrata/3rdChapter/: 1stTask.cpp  2ndTask.cpp  3rdTask.cpp  5thTask.cpp
source/StevenPrata/4th/: FourthChapter.cpp
source/StevenPrata/4thChapter/: 10thTask.cpp  1stTask.cpp  3rdTask.cpp  5thTask.cpp  7thTask.cpp  8thTask.cpp  9thTask.cpp
source/StevenPrata/5th/: FifthChapter.cpp  FifthChapter.h
source/StevenPrata/5thChapter/: 1stTask.cpp  3rdTask.cpp  4thTask.cpp  5thTask.cpp  6thTask.cpp  7thTask.cpp  8thTask.cpp
source/StevenPrata/6th/: 8thTask.txt
source/StevenPrata/6thChapter/: 1stTask.cpp  3rdTask.cpp  4thTask.cpp  5thTask.cpp  6thTask.cpp  8thTask.cpp  8thTask.txt  9thTask.cpp
source/StevenPrata/7th/: SeventhChapter.cpp
source/StevenPrata/7thChapter/: 10thTask.cpp  1stTask.cpp  3rdTask.cpp  4thTask.cpp  6thTask.cpp
source/StevenPrata/8th/: EighthChapter.cpp
source/StevenPrata/8thChapter/: 1stTask.cpp  4thTask.cpp  5thTask.cpp
source/StevenPrata/9th/: NinthChapter.cpp
source/StevenPrata/9thChapter/: 1stTask.cpp  3rdTask.cpp  Declarations.h
(+31 files in other folders)
