cmake_minimum_required(VERSION 3.25)
project(CPP_Learning)

set(CMAKE_CXX_STANDARD 11)

add_executable(CPP_Learning main.cpp "source/StevenPrata/2ndChapter/1stTask.cpp" source/StevenPrata/2ndChapter/2ndTask.cpp source/StevenPrata/2ndChapter/3rdTask.cpp source/StevenPrata/2ndChapter/4thTask.cpp source/StevenPrata/2ndChapter/5thTask.cpp source/StevenPrata/2ndChapter/6thTask.cpp source/StevenPrata/2ndChapter/7thTask.cpp)
