cmake_minimum_required(VERSION 3.25)
project(CPP_Learning)

set(CMAKE_CXX_STANDARD 11)

add_executable(CPP_Learning source/main.cpp

        source/StevenPrata/Declarations.h

        source/StevenPrata/2ndChapter/Declarations.h
        source/StevenPrata/2ndChapter/1stTask.cpp
        source/StevenPrata/2ndChapter/2ndTask.cpp
        source/StevenPrata/2ndChapter/3rdTask.cpp
        source/StevenPrata/2ndChapter/4thTask.cpp
        source/StevenPrata/2ndChapter/5thTask.cpp
        source/StevenPrata/2ndChapter/6thTask.cpp
        source/StevenPrata/2ndChapter/7thTask.cpp

        source/StevenPrata/3rdChapter/Declarations.h
        source/StevenPrata/3rdChapter/1stTask.cpp
        source/StevenPrata/3rdChapter/2ndTask.cpp
        source/StevenPrata/3rdChapter/3rdTask.cpp
        source/StevenPrata/3rdChapter/4thTask.cpp
        source/StevenPrata/3rdChapter/5thTask.cpp
        source/StevenPrata/3rdChapter/6thTask.cpp
        source/StevenPrata/3rdChapter/7thTask.cpp

        source/StevenPrata/4thChapter/Declarations.h
        source/StevenPrata/4thChapter/1stTask.cpp
        source/StevenPrata/4thChapter/2ndTask.cpp
        source/StevenPrata/4thChapter/3rdTask.cpp
        source/StevenPrata/4thChapter/4thTask.cpp
        source/StevenPrata/4thChapter/5thTask.cpp
        source/StevenPrata/4thChapter/6thTask.cpp
        source/StevenPrata/4thChapter/7thTask.cpp
        source/StevenPrata/4thChapter/8thTask.cpp
        source/StevenPrata/4thChapter/9thTask.cpp
        source/StevenPrata/4thChapter/10thTask.cpp

        source/StevenPrata/5thChapter/Declarations.h
        source/StevenPrata/5thChapter/1stTask.cpp
        source/StevenPrata/5thChapter/2ndTask.cpp
        source/StevenPrata/5thChapter/3rdTask.cpp
        source/StevenPrata/5thChapter/4thTask.cpp
        source/StevenPrata/5thChapter/5thTask.cpp
        source/StevenPrata/5thChapter/6thTask.cpp
        source/StevenPrata/5thChapter/7thTask.cpp
        source/StevenPrata/5thChapter/8thTask.cpp
        source/StevenPrata/5thChapter/9thTask.cpp
        source/StevenPrata/5thChapter/10thTask.cpp

        source/StevenPrata/6thChapter/Declarations.h
        source/StevenPrata/6thChapter/1stTask.cpp
        source/StevenPrata/6thChapter/2ndTask.cpp
        source/StevenPrata/6thChapter/3rdTask.cpp
        source/StevenPrata/6thChapter/4thTask.cpp
        source/StevenPrata/6thChapter/5thTask.cpp
        source/StevenPrata/6thChapter/6thTask.cpp
        source/StevenPrata/6thChapter/7thTask.cpp
        source/StevenPrata/6thChapter/8thTask.cpp
        source/StevenPrata/6thChapter/9thTask.cpp

        source/StevenPrata/7thChapter/Declarations.h
        source/StevenPrata/7thChapter/1stTask.cpp
        source/StevenPrata/7thChapter/2ndTask.cpp
        source/StevenPrata/7thChapter/3rdTask.cpp
        source/StevenPrata/7thChapter/4thTask.cpp
        source/StevenPrata/7thChapter/5thTask.cpp
        source/StevenPrata/7thChapter/6thTask.cpp
        source/StevenPrata/7thChapter/7thTask.cpp
        source/StevenPrata/7thChapter/8thTask.cpp
        source/StevenPrata/7thChapter/9thTask.cpp
        source/StevenPrata/7thChapter/10thTask.cpp

        source/StevenPrata/8thChapter/Declarations.h
        source/StevenPrata/8thChapter/1stTask.cpp
        source/StevenPrata/8thChapter/2ndTask.cpp
        source/StevenPrata/8thChapter/3rdTask.cpp
        source/StevenPrata/8thChapter/4thTask.cpp
        source/StevenPrata/8thChapter/5thTask.cpp
        source/StevenPrata/8thChapter/6thTask.cpp
        source/StevenPrata/8thChapter/7thTask.cpp

        source/StevenPrata/9thChapter/Declarations.h
        source/StevenPrata/9thChapter/1stTask.cpp
        source/StevenPrata/9thChapter/1stTaskFiles/Golf.cpp
        source/StevenPrata/9thChapter/2ndTask.cpp
        source/StevenPrata/9thChapter/3rdTask.cpp
        source/StevenPrata/9thChapter/4thTask.cpp
        source/StevenPrata/9thChapter/4thTaskFiles/Sales.cpp

        source/StevenPrata/10thChapter/Declarations.h
        source/StevenPrata/10thChapter/1stTask.cpp
        source/StevenPrata/10thChapter/1stTaskFiles/BackAccount.cpp
        source/StevenPrata/10thChapter/2ndTask.cpp
        source/StevenPrata/10thChapter/2ndTaskFiles/Person.cpp
        source/StevenPrata/10thChapter/3rdTask.cpp
        source/StevenPrata/10thChapter/3rdTaskFiles/GolfClass.cpp
        source/StevenPrata/10thChapter/4thTask.cpp
        source/StevenPrata/10thChapter/4thTaskFiles/SalesClass.cpp
        source/StevenPrata/10thChapter/5thTask.cpp
        source/StevenPrata/10thChapter/5thTaskFiles/Stack.h
        source/StevenPrata/10thChapter/6thTask.cpp
        source/StevenPrata/10thChapter/6thTaskFiles/Move.cpp
        source/StevenPrata/10thChapter/7thTask.cpp
        source/StevenPrata/10thChapter/7thTaskFiles/Plorg.cpp
        source/StevenPrata/10thChapter/8thTask.cpp
        source/StevenPrata/10thChapter/8thTaskFiles/List.cpp

        source/StevenPrata/11thChapter/Declarations.h
        source/StevenPrata/11thChapter/1stTask.cpp
        source/StevenPrata/11thChapter/1stTaskFiles/Vector.h
        source/StevenPrata/11thChapter/1stTaskFiles/Vector.cpp
        source/StevenPrata/11thChapter/2ndTask.cpp
        source/StevenPrata/11thChapter/2ndTaskFiles/VectorRect.h
        source/StevenPrata/11thChapter/2ndTaskFiles/VectorRect.cpp
        source/StevenPrata/11thChapter/3rdTask.cpp
        source/StevenPrata/11thChapter/4thTask.cpp
        source/StevenPrata/11thChapter/4thTaskFiles/Time.cpp
        source/StevenPrata/11thChapter/5thTask.cpp
        source/StevenPrata/11thChapter/5thTaskFiles/Mass1.h
        source/StevenPrata/11thChapter/5thTaskFiles/Mass1.cpp
        source/StevenPrata/11thChapter/6thTask.cpp
        source/StevenPrata/11thChapter/6thTaskFiles/Mass2.h
        source/StevenPrata/11thChapter/6thTaskFiles/Mass2.cpp
        source/StevenPrata/11thChapter/7thTask.cpp
        source/StevenPrata/11thChapter/7thTaskFiles/Complex.cpp

        source/StevenPrata/12thChapter/Declarations.h
        source/StevenPrata/12thChapter/1stTask.cpp
        source/StevenPrata/12thChapter/1stTaskFiles/Cow.h
        source/StevenPrata/12thChapter/1stTaskFiles/Cow.cpp
        source/StevenPrata/12thChapter/2ndTask.cpp
        source/StevenPrata/12thChapter/2ndTaskFiles/String.cpp


        source/CodeWars/Declarations.h

        source/CodeWars/4thKyu/Declarations.h
        source/CodeWars/4thKyu/SumByFactors.cpp
        source/CodeWars/4thKyu/HammingNumbers.cpp
        source/CodeWars/4thKyu/MysteryFunction.cpp

        source/CodeWars/5thKyu/Declarations.h
        source/CodeWars/5thKyu/Brainfuck.cpp
        source/CodeWars/5thKyu/MoveZeroes.cpp
        source/CodeWars/5thKyu/IncrementString.cpp

        source/CodeWars/6thKyu/Declarations.h
        source/CodeWars/6thKyu/SchrodingersBoolean.cpp
        source/CodeWars/6thKyu/TwoSum.cpp
        source/CodeWars/6thKyu/MissingInArithmeticProgression.cpp
        source/CodeWars/6thKyu/BitLetter.cpp
        source/CodeWars/6thKyu/FruitMachine.cpp
        source/CodeWars/6thKyu/CreatePhoneNumber.cpp
        source/CodeWars/6thKyu/IpToInt32.cpp
        source/CodeWars/6thKyu/LucasNumber.cpp
        source/CodeWars/6thKyu/DeleteDigit.cpp


        source/LeetCode/Declarations.h

        source/LeetCode/Easy/Declarations.h
        source/LeetCode/Easy/PalindromeNumber.cpp
        source/LeetCode/Easy/TwoSum.cpp
        source/LeetCode/Easy/LongestCommonPrefix.cpp
        source/LeetCode/Easy/PlusOne.cpp
        source/LeetCode/Easy/RemoveElement.cpp
        source/LeetCode/Easy/AddBinary.cpp
        source/LeetCode/Easy/RomanToInteger.cpp
        source/LeetCode/Easy/SingleNumber.cpp
        source/LeetCode/Easy/ReverseBits.cpp
        source/LeetCode/Easy/HammingWeight.cpp

        source/LeetCode/Normal/Declarations.h
        source/LeetCode/Normal/AddTwoNumbers.cpp
        source/LeetCode/Normal/IntegerToRoman.cpp
        source/LeetCode/Normal/ReverseInteger.cpp
        source/LeetCode/Normal/DivideTwoIntegers.cpp
        source/LeetCode/Normal/LetterCombinations.cpp)
