cmake_minimum_required(VERSION 3.25)
project(StephenPrataSolutions)

set(CMAKE_CXX_STANDARD 11)

add_executable(StephenPrataSolutions

        source/main.cpp
        source/Declarations.h

        source/2ndChapter/Declarations.h
        source/2ndChapter/1stTask.cpp
        source/2ndChapter/2ndTask.cpp
        source/2ndChapter/3rdTask.cpp
        source/2ndChapter/4thTask.cpp
        source/2ndChapter/5thTask.cpp
        source/2ndChapter/6thTask.cpp
        source/2ndChapter/7thTask.cpp

        source/3rdChapter/Declarations.h
        source/3rdChapter/1stTask.cpp
        source/3rdChapter/2ndTask.cpp
        source/3rdChapter/3rdTask.cpp
        source/3rdChapter/4thTask.cpp
        source/3rdChapter/5thTask.cpp
        source/3rdChapter/6thTask.cpp
        source/3rdChapter/7thTask.cpp

        source/4thChapter/Declarations.h
        source/4thChapter/1stTask.cpp
        source/4thChapter/2ndTask.cpp
        source/4thChapter/3rdTask.cpp
        source/4thChapter/4thTask.cpp
        source/4thChapter/5thTask.cpp
        source/4thChapter/6thTask.cpp
        source/4thChapter/7thTask.cpp
        source/4thChapter/8thTask.cpp
        source/4thChapter/9thTask.cpp
        source/4thChapter/10thTask.cpp

        source/5thChapter/Declarations.h
        source/5thChapter/1stTask.cpp
        source/5thChapter/2ndTask.cpp
        source/5thChapter/3rdTask.cpp
        source/5thChapter/4thTask.cpp
        source/5thChapter/5thTask.cpp
        source/5thChapter/6thTask.cpp
        source/5thChapter/7thTask.cpp
        source/5thChapter/8thTask.cpp
        source/5thChapter/9thTask.cpp
        source/5thChapter/10thTask.cpp

        source/6thChapter/Declarations.h
        source/6thChapter/1stTask.cpp
        source/6thChapter/2ndTask.cpp
        source/6thChapter/3rdTask.cpp
        source/6thChapter/4thTask.cpp
        source/6thChapter/5thTask.cpp
        source/6thChapter/6thTask.cpp
        source/6thChapter/7thTask.cpp
        source/6thChapter/8thTask.cpp
        source/6thChapter/9thTask.cpp

        source/7thChapter/Declarations.h
        source/7thChapter/1stTask.cpp
        source/7thChapter/2ndTask.cpp
        source/7thChapter/3rdTask.cpp
        source/7thChapter/4thTask.cpp
        source/7thChapter/5thTask.cpp
        source/7thChapter/6thTask.cpp
        source/7thChapter/7thTask.cpp
        source/7thChapter/8thTask.cpp
        source/7thChapter/9thTask.cpp
        source/7thChapter/10thTask.cpp

        source/8thChapter/Declarations.h
        source/8thChapter/1stTask.cpp
        source/8thChapter/2ndTask.cpp
        source/8thChapter/3rdTask.cpp
        source/8thChapter/4thTask.cpp
        source/8thChapter/5thTask.cpp
        source/8thChapter/6thTask.cpp
        source/8thChapter/7thTask.cpp

        source/9thChapter/Declarations.h
        source/9thChapter/1stTask.cpp
        source/9thChapter/1stTaskFiles/Golf.h
        source/9thChapter/1stTaskFiles/Golf.cpp
        source/9thChapter/2ndTask.cpp
        source/9thChapter/3rdTask.cpp
        source/9thChapter/4thTask.cpp
        source/9thChapter/4thTaskFiles/Sales.h
        source/9thChapter/4thTaskFiles/Sales.cpp

        source/10thChapter/Declarations.h
        source/10thChapter/1stTask.cpp
        source/10thChapter/1stTaskFiles/BankAccount.h
        source/10thChapter/1stTaskFiles/BackAccount.cpp
        source/10thChapter/2ndTask.cpp
        source/10thChapter/2ndTaskFiles/Person.h
        source/10thChapter/2ndTaskFiles/Person.cpp
        source/10thChapter/3rdTask.cpp
        source/10thChapter/3rdTaskFiles/GolfClass.h
        source/10thChapter/3rdTaskFiles/GolfClass.cpp
        source/10thChapter/4thTask.cpp
        source/10thChapter/4thTaskFiles/SalesClass.h
        source/10thChapter/4thTaskFiles/SalesClass.cpp
        source/10thChapter/5thTask.cpp
        source/10thChapter/5thTaskFiles/Stack.h
        source/10thChapter/6thTask.cpp
        source/10thChapter/6thTaskFiles/Move.h
        source/10thChapter/6thTaskFiles/Move.cpp
        source/10thChapter/7thTask.cpp
        source/10thChapter/7thTaskFiles/Plorg.h
        source/10thChapter/7thTaskFiles/Plorg.cpp
        source/10thChapter/8thTask.cpp
        source/10thChapter/8thTaskFiles/List.h
        source/10thChapter/8thTaskFiles/List.cpp


        source/11thChapter/Declarations.h
        source/11thChapter/1stTask.cpp
        source/11thChapter/1stTaskFiles/Vector.h
        source/11thChapter/1stTaskFiles/Vector.cpp
        source/11thChapter/2ndTask.cpp
        source/11thChapter/2ndTaskFiles/VectorRect.h
        source/11thChapter/2ndTaskFiles/VectorRect.cpp
        source/11thChapter/3rdTask.cpp
        source/11thChapter/4thTask.cpp
        source/11thChapter/4thTaskFiles/Time.h
        source/11thChapter/4thTaskFiles/Time.cpp
        source/11thChapter/5thTask.cpp
        source/11thChapter/5thTaskFiles/Mass1.h
        source/11thChapter/5thTaskFiles/Mass1.cpp
        source/11thChapter/6thTask.cpp
        source/11thChapter/6thTaskFiles/Mass2.h
        source/11thChapter/6thTaskFiles/Mass2.cpp
        source/11thChapter/7thTask.cpp
        source/11thChapter/7thTaskFiles/Complex.h
        source/11thChapter/7thTaskFiles/Complex.cpp

        source/12thChapter/Declarations.h
        source/12thChapter/1stTask.cpp
        source/12thChapter/1stTaskFiles/Cow.h
        source/12thChapter/1stTaskFiles/Cow.cpp
        source/12thChapter/2ndTask.cpp
        source/12thChapter/2ndTaskFiles/String.h
        source/12thChapter/2ndTaskFiles/String.cpp
        source/12thChapter/3rdTask.cpp
        source/12thChapter/3rdTaskFiles/Stock.cpp
        source/12thChapter/3rdTaskFiles/Stock.h
        source/12thChapter/4thTask.cpp
        source/12thChapter/4thTaskFiles/Stack.cpp
        source/12thChapter/4thTaskFiles/Stack.h)
